# Database

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
docs/: Doxyfile.in  mainpage.md
src/: BaseDeDatos.cpp  BaseDeDatos.h  Dato.cpp  Dato.h  Indice.cpp  Indice.h  Registro.cpp  Registro.h  Restriccion.cpp  Restriccion.h  Tabla.cpp  Tabla.h  const_iterador_registros.cpp  const_iterador_registros.h  linear_map.h  linear_map.hpp  linear_set.h  linear_set.hpp  linear_set_iterators.h  string_map.h  string_map.hpp  utils.h
tests/: base_de_datos_test.cpp  dato_test.cpp  linear_map_tests.cpp  linear_set_tests.cpp  registro_test.cpp  string_map_test.cpp  tabla_test.cpp
tests/google-test/: Makefile  cmake_install.cmake  gtest.cbp
