cmake_minimum_required(VERSION 3.8)
project(aed2_2c2017_tp2)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        cmake-build-debug/docs/Doxyfile
        cmake-build-debug/tests/google-test/cmake_install.cmake
        cmake-build-debug/tests/google-test/gtest.cbp
        cmake-build-debug/tests/google-test/Makefile
        cmake-build-debug/aed2_2c2017_tp2.cbp
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/tp2.cbp
        docs/Doxyfile.in
        docs/mainpage.md
        docs/tp2_enunciado.pdf
        docs/tp2_especificacion.pdf
        src/BaseDeDatos.cpp
        src/BaseDeDatos.h
        src/const_iterador_registros.cpp
        src/const_iterador_registros.h
        src/Dato.cpp
        src/Dato.h
        src/linear_map.h
        src/linear_map.hpp
        src/linear_set.h
        src/linear_set.hpp
        src/linear_set_iterators.h
        src/Registro.cpp
        src/Registro.h
        src/Restriccion.cpp
        src/Restriccion.h
        src/string_map.h
        src/string_map.hpp
        src/Tabla.cpp
        src/Tabla.h
        src/utils.h
        tests/google-test/include/gtest/internal/custom/gtest-port.h
        tests/google-test/include/gtest/internal/custom/gtest-printers.h
        tests/google-test/include/gtest/internal/custom/gtest.h
        tests/google-test/include/gtest/internal/gtest-death-test-internal.h
        tests/google-test/include/gtest/internal/gtest-filepath.h
        tests/google-test/include/gtest/internal/gtest-internal.h
        tests/google-test/include/gtest/internal/gtest-linked_ptr.h
        tests/google-test/include/gtest/internal/gtest-param-util-generated.h
        tests/google-test/include/gtest/internal/gtest-param-util.h
        tests/google-test/include/gtest/internal/gtest-port-arch.h
        tests/google-test/include/gtest/internal/gtest-port.h
        tests/google-test/include/gtest/internal/gtest-string.h
        tests/google-test/include/gtest/internal/gtest-tuple.h
        tests/google-test/include/gtest/internal/gtest-type-util.h
        tests/google-test/include/gtest/gtest-death-test.h
        tests/google-test/include/gtest/gtest-message.h
        tests/google-test/include/gtest/gtest-param-test.h
        tests/google-test/include/gtest/gtest-printers.h
        tests/google-test/include/gtest/gtest-spi.h
        tests/google-test/include/gtest/gtest-test-part.h
        tests/google-test/include/gtest/gtest-typed-test.h
        tests/google-test/include/gtest/gtest.h
        tests/google-test/include/gtest/gtest_pred_impl.h
        tests/google-test/include/gtest/gtest_prod.h
        tests/google-test/src/gtest-all.cc
        tests/google-test/src/gtest-death-test.cc
        tests/google-test/src/gtest-filepath.cc
        tests/google-test/src/gtest-internal-inl.h
        tests/google-test/src/gtest-port.cc
        tests/google-test/src/gtest-printers.cc
        tests/google-test/src/gtest-test-part.cc
        tests/google-test/src/gtest-typed-test.cc
        tests/google-test/src/gtest.cc
        tests/google-test/src/gtest_main.cc
        tests/base_de_datos_test.cpp
        tests/dato_test.cpp
        tests/linear_map_tests.cpp
        tests/linear_set_tests.cpp
        tests/registro_test.cpp
        tests/string_map_test.cpp
        tests/tabla_test.cpp
        CHANGELOG.md
        CMakeLists.txt
        README.md)

add_executable(aed2_2c2017_tp2 ${SOURCE_FILES})